[package]
name = "rtd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
miette = { version = "5.10.0", features = ["fancy"] }
once_cell = "1.18.0"
